# paper-utils

./: README.md  pyproject.toml
paper_utils/: lib.py  patentcity.py  plots.py  techdiff.py
