[tool.poetry]
name = "paper_utils"
version = "0.1.0"
description = ""
authors = ["cverluise <cyril.verluise@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pre-commit = "^2.13.0"
pandas = "1.1.5"
matplotlib = "3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
